objects/Deal_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>Deal__c</fullName>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Deal Team Members</relationshipLabel>
        <relationshipName>Deal_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Aprovals Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deal Team Member</label>
    <nameField>
        <displayFormat>DealTeamMember-{0000}</displayFormat>
        <label>Deal Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>